Legalwing desktop view and mobile done still server

--- a/src/assets/css/AgreementBenefits.css
+++ b/src/assets/css/AgreementBenefits.css
@@ -1,7 +1,7 @@
 .agreement-section {
     background: #fff;
     /* background: linear-gradient(180deg, #f8fafc, #eef2f7); */
-    padding: 30px 16px;
+    /* padding: 30px 16px; */
 }
 
 /* .container {
