--- a/src/assets/css/KeyClauses.css
+++ b/src/assets/css/KeyClauses.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: right;
-    padding: 85px 0;
+    padding: 97px 0;
     min-height: 59vh;
     box-shadow: 0 4px 6px -6px #222;
     -webkit-box-shadow: 0 4px 6px -6px #222;
@@ -75,7 +75,7 @@
         gap: 24px;
     }
 
-    .header-title h2 {
+    .header-title {
         font-size: 32px;
     }
 
@@ -91,8 +91,12 @@
         text-align: center;
     }
 
-    .header-title h2 {
-        font-size: 26px;
+    .clauses-header {
+        padding: 30px 16px;
+    }
+
+    .header-title {
+        font-size: 25px;
     }
 
     .header-image img {
@@ -111,7 +115,7 @@
 }
 
 .clauses-container {
-    max-width: 1200px;
+    /* max-width: 1200px; */
     margin: auto;
     text-align: center;
 }
@@ -213,9 +217,9 @@
     }
 
     .key-clauses-header {
-        background-size: contain;
+        background-size: cover;
         background-position: center;
-        padding: 0px 0;
+        padding: 10px 0;
         min-height: unset;
     }
 }
