--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,15 +1,16 @@
 .premium-footer {
   background: linear-gradient(180deg, #020617, #020617);
   color: #fff; /*#e5e7eb*/
-  padding: 70px 16px 0;
+  /* padding: 55px 16px 0; */
 }
 
 .footer-container {
-  max-width: 1200px;
+  /* max-width: 1200px; */
   margin: auto;
   display: grid;
   grid-template-columns: 1.4fr 1fr 1fr 1.2fr;
   gap: 50px;
+  padding: 55px 16px 0;
 }
 
 .footer-col h3 {
@@ -90,14 +91,14 @@
 @media (max-width: 900px) {
   .footer-container {
     grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
+    gap: 25px;
   }
 }
 
 /* Mobile */
 @media (max-width: 600px) {
   .premium-footer {
-    padding-top: 60px;
+    padding-top: 0px;
   }
 
   .footer-container {
