--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -38,23 +38,28 @@
   font-size: 1.4rem;
   margin: 0px 15px;
 }
+
 .legal-brand {
   font-weight: 600;
   font-size: 1.25rem;
   letter-spacing: -0.4px;
-  color: #fff; /*#0f3d91;*/
+  color: #fff;
+  /*#0f3d91;*/
   transition: all 0.3s ease-in;
 }
-.navbar-brand:focus, .navbar-brand:hover{
-    color:#fff !important;
-    filter: drop-shadow(0px 0px 20px #fff);
+
+.navbar-brand:focus,
+.navbar-brand:hover {
+  color: #fff !important;
+  filter: drop-shadow(0px 0px 20px #fff);
 }
 
 /* ===== Menu ===== */
 .legal-menu .nav-link {
   font-size: 0.95rem;
   font-weight: 500;
-  color: #fff !important; /*#1d1d1f*/
+  color: #fff !important;
+  /*#1d1d1f*/
   padding: 8px 18px;
   transition: all 0.3s ease-in;
 }
@@ -121,7 +126,47 @@
 
   .legal-cta {
     flex-direction: column;
-    margin-top: 12px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+
   }
+
+  .legal-whatsapp {
+    background: #45c11e70 !important;
+  }
+
 }
 
+
+
+/* Navbar Toggler CSS for Mobile View */
+/* Remove default border */
+.navbar-toggler {
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+/* Remove focus & active outline */
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler:focus-visible {
+  outline: none;
+  box-shadow: none;
+}
+
+/* Optional: custom icon color */
+.navbar-toggler-icon {
+  filter: drop-shadow(0px 0px 10px black);
+}
+
+/* Smooth tap effect (optional premium touch) */
+.navbar-toggler {
+  padding: 6px 8px;
+  border-radius: 6px;
+  transition: background-color 0.2s ease;
+}
+
+.navbar-toggler:active {
+  background-color: rgba(0, 0, 0, 0.08);
+}
