--- a/src/assets/css/KeyClauses.css
+++ b/src/assets/css/KeyClauses.css
@@ -96,7 +96,7 @@
     }
 
     .header-title {
-        font-size: 20px;
+        font-size: 18px;
     }
 
     .header-image img {
@@ -217,9 +217,9 @@
     }
 
     .key-clauses-header {
-        background-size: cover;
+        background-size: contain;
         background-position: center;
-        padding: 10px 0;
-        min-height: unset;
+        padding: 10px 0px;
+        min-height: 15vh;
     }
 }
