--- a/src/assets/css/govtcard.css
+++ b/src/assets/css/govtcard.css
@@ -3,7 +3,6 @@
   position: relative;
   border-radius: 20px;
   padding: 50px 20px;
-  /* padding: 22px; */
   backdrop-filter: blur(14px);
   -webkit-backdrop-filter: blur(14px);
   box-shadow: 0 15px 40px rgba(0,0,0,0.15);
@@ -25,7 +24,7 @@
   width: 70px;
   height: 60px;
   border-radius: 50%;
-  background: rgb(53 220 113 / 8%);  /*linear-gradient(135deg,#ffeaa7,#fdcb6e);*/
+  background: rgb(53 220 113 / 8%); 
   display: flex;
   align-items: center;
   justify-content: center;
